# templates.api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/templates_api/: config.py  crud.py  database.py  main.py  models.py  schemas.py
src/templates_api/routers/: items.py
tests/: conftest.py  test_crud.py  test_main.py  test_routers.py
