[tool.poetry]
name = "templates-api"
version = "0.1.0"
description = "Template for python API development using FastAPI."
authors = ["Claudia De Jeu Boronat <clau.dejeuboronat@towerswatson.com>"]
readme = "README.md"
packages = [{include = "templates"}]

[tool.poetry.dependencies]
python = "~3.11.9"
pandas = "^2.2.2"
numpy = "^2.0.1"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
scikit-learn = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^1.0.0"
PyYAML = "^6.0.1"
types-jsonschema = "^4.23.0.20240712"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
