[tool.poetry]
name = "templates-api"
version = "0.1.0"
description = "Template for python API development using FastAPI."
authors = ["Claudia De Jeu Boronat <claudiadejeuboronat@gmail.com>"]
readme = "README.md"
packages = [{include = "templates"}]

[tool.poetry.dependencies]
python = "~3.11.9"
pandas = "^2.2.2"
numpy = "^2.0.1"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
scikit-learn = "^1.5.1"
sqlalchemy = "^2.0.31"
uvicorn = "^0.30.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^1.0.0"
PyYAML = "^6.0.1"
types-jsonschema = "^4.23.0.20240712"


[tool.poetry.group.linting.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.11.0"
flake8 = "^7.1.0"
docformatter = "^1.7.5"
bandit = "^1.7.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
